# amz_hack2skill

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.kiro/specs/beatsync-ai/: design.md  requirements.md
.kiro/specs/rezaa-ai/: design.md  requirements.md
deploy/: aws-setup.sh  instance-init.sh
src/rezaa/: __init__.py  config.py
src/rezaa/agents/: alignment_agent.py  audio_agent.py  base.py  video_agent.py
src/rezaa/api/: app.py  dependencies.py  middleware.py
src/rezaa/api/routes/: benchmark.py  download.py  process.py  (+2 more)
src/rezaa/extractors/: audio_extractor.py  validators.py  video_extractor.py
src/rezaa/models/: __init__.py  alignment.py  audio.py  benchmark.py  edl.py  errors.py  pipeline.py  preferences.py  render.py  video.py
src/rezaa/orchestrator/: decision.py  parser.py  prompts.py
src/rezaa/pipeline/: manager.py  tasks.py
src/rezaa/rendering/: engine.py  ffmpeg_builder.py  progress.py
src/rezaa/static/: benchmark.html  index.html
src/rezaa/storage/: feature_store.py  temp_store.py
tests/: conftest.py
tests/integration/: test_agent_pipeline.py  test_api_endpoints.py
tests/property/: conftest.py  test_properties_alignment.py  test_properties_audio.py  test_properties_edl.py  test_properties_pipeline.py  test_properties_prefs.py  test_properties_validation.py  test_properties_video.py
tests/unit/: test_alignment_agent.py  test_audio_agent.py  test_audio_extractor.py  test_models.py  test_orchestrator.py  test_rendering.py  test_validators.py  test_video_agent.py  test_video_extractor.py
