[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rezaa-ai"
version = "0.1.0"
description = "Intelligent multi-agent video editing system that synchronizes video clips to music beats"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "librosa>=0.10",
    "opencv-python-headless>=4.8",
    "ffmpeg-python>=0.2",
    "openai>=1.0",
    "fastapi>=0.100",
    "celery[redis]>=5.3",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
    "numpy>=1.24",
    "scipy>=1.11",
    "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.80",
    "ruff>=0.1",
    "mypy>=1.5",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rezaa"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "property: marks property-based tests",
    "integration: marks integration tests",
    "e2e: marks end-to-end tests",
]
